--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
   "window": {
     "title": "CloudBook",
     "icon": "logo.png",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 1024,
     "height": 768,
