--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,11 @@
   "name": "CloudBook",
   "description": "Graphical editor book",
   "version": "0.1.0",
-  "keywords": [ "editor", "book","resources" ],
+  "keywords": [
+    "editor",
+    "book",
+    "resources"
+  ],
   "window": {
     "title": "CloudBook",
     "icon": "logo.png",
@@ -15,5 +19,8 @@
   },
   "webkit": {
     "plugin": true
+  },
+  "dependencies": {
+    "jed": "~1.1.0"
   }
 }
