--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "grunt": "~0.4.5",
-    "grunt-jsdoc": "~0.6.2"
+    "grunt-jsdoc": "~0.6.2",
+    "jsxgettext": "~0.6.2",
+    "grunt-jsxgettext": "0.0.3",
+    "grunt-po2json": "~0.3.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +24,6 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/raurodse/cloudbook/issues"
-  }
+  },
+  "devDependencies": {}
 }
