--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "doc"
   },
   "dependencies": {
+    "fs.extra": "^1.3.2",
     "grunt": "~0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-jsdoc": "~0.6.2",
