--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "jed": "~1.1.0",
-    "fs-extra": "~0.18.0"
+    "fs-extra": "~0.18.0",
+    "fs.extra": "~1.3.2"
   }
 }
