--- a/src/package.json
+++ b/src/package.json
@@ -21,10 +21,11 @@
   "webkit": {
     "plugin": true
   },
-	"chromium-args": "--ppapi-flash-path=plugins/libpepflashplayer.so --ppapi-flash-version=17.0.0.134",
+  "chromium-args": "--ppapi-flash-path=plugins/libpepflashplayer.so --ppapi-flash-version=17.0.0.134",
   "dependencies": {
-    "jed": "~1.1.0",
     "fs-extra": "~0.18.0",
+    "jed": "~1.1.0",
+    "wkhtmltopdf": "^0.1.5",
     "fs.extra": "~1.3.2"
   }
 }
