--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "~0.18.0",
     "jed": "~1.1.0",
     "mktemp": "~0.4.0",
-    "zip-folder": "^1.0.0"
+    "zip-folder": "^1.0.0",
+    "image-size": "~0.3.5"
   }
 }
