--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
     "jed": "~1.1.0",
     "mktemp": "~0.4.0",
     "zip-folder": "^1.0.0",
-    "image-size": "~0.3.5"
+    "image-size": "~0.3.5",
+    "epub-gen": "0.0.9"
   }
 }
