--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "doc"
   },
   "dependencies": {
-    "fs.extra": "^1.3.2",
+    "fs.extra": "^1.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,10 +22,11 @@
     "url": "https://github.com/cloud-book/cloudbook/issues"
   },
   "devDependencies": {
-    "jsxgettext": "~0.6.3",
+    "globule": "^0.2.0",
     "gulp": "~3.8.11",
     "jsdoc": "~3.3.0",
-    "po2json": "~0.4.1",
-    "node-webkit-builder": "~1.0.11"
+    "jsxgettext": "~0.6.3",
+    "node-webkit-builder": "~1.0.11",
+    "po2json": "~0.4.1"
   }
 }
