--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsdoc": "~3.3.0",
     "jsxgettext": "~0.6.3",
     "node-webkit-builder": "~1.0.11",
-    "po2json": "~0.4.1"
+    "po2json": "~0.4.1",
+    "lodash": "~3.8.0"
   }
 }
