--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsxgettext": "~0.6.3",
     "node-webkit-builder": "~1.0.11",
     "po2json": "~0.4.1",
-    "lodash": "~3.8.0"
+    "lodash": "~3.8.0",
+    "gulp-util": "~3.0.4"
   }
 }
