--- a/src/package.json
+++ b/src/package.json
@@ -24,9 +24,10 @@
   "chromium-args": "--ppapi-flash-path=/usr/share/cloudbook/plugins/libpepflashplayer.so --ppapi-flash-version=17.0.0.134",
   "dependencies": {
     "fs-extra": "~0.18.0",
+    "image-size": "~0.3.5",
     "jed": "~1.1.0",
+    "minimist": "^1.1.1",
     "mktemp": "~0.4.0",
-    "zip-folder": "^1.0.0",
-    "image-size": "~0.3.5"
+    "zip-folder": "^1.0.0"
   }
 }
