--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "dependencies": {
-    "fs.extra": "^1.3.2"
+    "fs.extra": "^1.3.2",
+    "chrome-remote-interface": "~0.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
