--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "directories": {
     "doc": "doc"
   },
-  "dependencies": {
-    "fs.extra": "^1.3.2",
-    "chrome-remote-interface": "~0.7.0"
-  },
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,13 +20,18 @@
     "url": "https://github.com/cloud-book/cloudbook/issues"
   },
   "devDependencies": {
+    "async": "^0.9.0",
     "globule": "^0.2.0",
     "gulp": "~3.8.11",
+    "rc": "^0.5.0",
     "jsdoc": "~3.3.0",
     "jsxgettext": "~0.6.3",
     "node-webkit-builder": "~1.0.11",
+    "should": "~6.0.1",
+    "chrome-remote-interface": "~0.7.0",
     "po2json": "~0.4.1",
     "lodash": "~3.8.0",
-    "gulp-util": "~3.0.4"
+    "gulp-util": "~3.0.4",
+    "mocha": "~2.2.5"
   }
 }
