changed npm package to import epub files

--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
     "mktemp": "~0.4.0",
     "zip-folder": "^1.0.0",
     "image-size": "~0.3.5",
-    "epub-gen": "0.0.9"
+    "epub-gen": "0.0.9",
+    "epub3tohtml": "0.0.1"
   }
 }
