--- a/src/package.json
+++ b/src/package.json
@@ -21,7 +21,7 @@
   "webkit": {
     "plugin": true
   },
-  "chromium-args": "--ppapi-flash-path=/usr/share/cloudbook/plugins/libpepflashplayer.so --ppapi-flash-version=17.0.0.134",
+  "chromium-args":"--ppapi-flash-path=/usr/lib/adobe-flashplugin/libpepflashplayer.so",
   "dependencies": {
     "fs-extra": "~0.18.0",
     "image-size": "~0.3.5",
