--- a/debian/rules
+++ b/debian/rules
@@ -27,9 +27,12 @@ custom-files:
 
 ifeq ($(DEB_BUILD_ARCH), i386)
 	cp -r webkitbuilds/CloudBook/linux32/* ./install/usr/share/cloudbook/
+	rm ./install/usr/share/cloudbook/libffmpegsumo.so
+
 endif
 
 ifeq ($(DEB_BUILD_ARCH), amd64)
 	cp -r webkitbuilds/CloudBook/linux64/* ./install/usr/share/cloudbook/
+	rm ./install/usr/share/cloudbook/libffmpegsumo.so
 endif
 
