--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: http://cloud-book.github.io/
 #Vcs-Git: git://github.com/cloud-book/cloudbook.git
 
 Package: cloudbook
-Architecture: any
+Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},wkhtmltox, fonts-roboto, adobe-flashplugin, chromium-codecs-ffmpeg-extra, nwjs0.12 (>=0.12+lliurex3)
 Description: Book editor
  Books graphical editor
