--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
   },
   "devDependencies": {
     "async": "^0.9.0",
+    "chrome-remote-interface": "~0.7.0",
     "globule": "^0.2.0",
     "gulp": "~3.8.11",
-    "rc": "^0.5.0",
+    "gulp-pretty-data": "^0.1.1",
+    "gulp-util": "~3.0.4",
     "jsdoc": "~3.3.0",
     "jsxgettext": "~0.6.3",
-    "node-webkit-builder": "~1.0.11",
-    "should": "~6.0.1",
-    "chrome-remote-interface": "~0.7.0",
-    "po2json": "~0.4.1",
     "lodash": "~3.8.0",
-    "gulp-util": "~3.0.4",
-    "mocha": "~2.2.5"
+    "mocha": "~2.2.5",
+    "node-webkit-builder": "~1.0.11",
+    "po2json": "~0.4.1",
+    "rc": "^0.5.0",
+    "should": "~6.0.1"
   }
 }
