--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "dependencies": {
-    "watch": "~0.16.0"
+    "watch": "~0.16.0",
+    "pretty-data": "~0.40.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
