--- a/src/package.json
+++ b/src/package.json
@@ -21,12 +21,12 @@
   "webkit": {
     "plugin": true
   },
-  "chromium-args":"--ppapi-flash-path=/usr/lib/adobe-flashplugin/libpepflashplayer.so",
+  "chromium-args": "--ppapi-flash-path=/usr/lib/adobe-flashplugin/libpepflashplayer.so",
   "dependencies": {
     "fs-extra": "~0.18.0",
     "image-size": "~0.3.5",
     "jed": "~1.1.0",
-    "minimist": "^1.1.1",
+    "minimist": "~1.1.1",
     "mktemp": "~0.4.0",
     "zip-folder": "^1.0.0",
     "epub-gen": "0.0.9",
