--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cloudbook
 Section: text
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
-Build-Depends: debhelper (>= 9.0.0)
+Build-Depends: debhelper (>= 9.0.0), nodejs, npm
 Standards-Version: 3.9.5
 Homepage: http://cloud-book.github.io/
 #Vcs-Git: git://github.com/cloud-book/cloudbook.git
