--- a/debian/rules
+++ b/debian/rules
@@ -12,9 +12,12 @@
 %:
 	dh $@
 
-#override_dh_install: custom-files
+override_dh_install: get-npm-depends
+	dh_install
 
-#	dh_install
+get-npm-depends:
+	cd src
+	npm install
 
 #override_dh_shlibdeps: 
 #	echo 'DONE'
