--- a/debian/rules
+++ b/debian/rules
@@ -12,12 +12,9 @@
 %:
 	dh $@
 
-override_dh_install: get-npm-depends
+override_dh_install:
 	dh_install
-
-get-npm-depends:
-	cd src
-	npm install
+	cd debian/cloudbook/usr/share/cloudbook/;npm install
 
 #override_dh_shlibdeps: 
 #	echo 'DONE'
