--- a/rsrc/cloudbook.desktop
+++ b/rsrc/cloudbook.desktop
@@ -14,8 +14,9 @@ Comment[es]=Crea libros digitales interactivos
 Comment[qcv]=Crea llibres digitals interactius
 Comment[ca_ES.UTF-8@valencia]=Crea llibres digitals interactius
 Comment[ca_ES]=Crea llibres digitals interactius
-Exec=/usr/bin/cloudbook
+Exec=/usr/bin/cloudbook %f
 TryExec=/usr/bin/cloudbook
 Icon=cloudbook
 Terminal=false
 Categories=ODE-Creation;
+MimeType=application/cloudbook;
