--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: cloudbook
 Section: text
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
-Build-Depends: debhelper (>= 9.0.0), nodejs, npm
+Build-Depends: debhelper (>= 9.0.0), nodejs, npm, llxsrchelper
 Standards-Version: 3.9.5
 Homepage: http://cloud-book.github.io/
 #Vcs-Git: git://github.com/cloud-book/cloudbook.git
 
 Package: cloudbook
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends},wkhtmltox, fonts-roboto, adobe-flashplugin (>=1:20150716.1-0trus), chromium-codecs-ffmpeg-extra, nwjs0.12-codecs-extra (>=0.12+lliurex3)
+Depends: ${shlibs:Depends}, ${misc:Depends}, wkhtmltox, fonts-roboto, adobe-flashplugin (>=1:20150716.1-0trus), chromium-codecs-ffmpeg-extra, nwjs0.12-codecs-extra (>=0.12+lliurex3)
 Description: Book editor
  Books graphical editor
