--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Homepage: http://cloud-book.github.io/
 
 Package: cloudbook
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, wkhtmltox, fonts-roboto, adobe-flashplugin (>=1:20150716.1-0trus), chromium-codecs-ffmpeg-extra, nwjs0.12-codecs-extra (>=0.12+lliurex3)
+Depends: ${shlibs:Depends}, ${misc:Depends}, wkhtmltox, fonts-roboto, chromium-codecs-ffmpeg-extra, nwjs0.12-codecs-extra (>=0.12+lliurex3)
+Suggests: adobe-flashplugin (>=1:20150716.1-0trus)
 Description: Book editor
  Books graphical editor
